# CMFregNotExtension

CMFregNotExtension/: CMakeLists.txt
CMFregNotExtension/Downsize/: Downsize.cxx
